# Demo4Echo

./: .gitignore  .gitmodules  README.md
AIChat_demo/Client/: CMakeLists.txt  README.md  toolchain.cmake
AIChat_demo/Client/c_interface/: AIchat_c_interface.cc  AIchat_c_interface.h  CMakeLists.txt  test.c
AIChat_demo/Client/inc/: Application.h  AudioProcess.h
AIChat_demo/Client/src/: Application.cc  WebsocketClient.cc  main.cc
AIChat_demo/Client_V2/: CMakeLists.txt  README.md  main.cc  toolchain.cmake
AIChat_demo/Client_V2/Application/: Application.cc  Application.h  Handler.cc  Handler.h  IntentsRegistry.cc  IntentsRegistry.h  StateConfig.h  WS_Handler.cc  WS_Handler.h
AIChat_demo/Client_V2/Application/UserIntents/: RobotMove.cc  RobotMove.h
AIChat_demo/Client_V2/Application/UserStates/: Listening.cc  Startup.cc
AIChat_demo/Client_V2/Events/: AppEvents.h
AIChat_demo/Client_V2/Intent/: IntentHandler.cc  IntentHandler.h
AIChat_demo/Client_V2/StateMachine/: StateConfig.cc  StateConfig.h
AIChat_demo/Client_V2/StateMachine/UserStates/: Idle.cc  Listening.cc  Speaking.cc  Startup.cc
AIChat_demo/Server/: MessageHandler.py  ModelManager.py  README.md  WebsocketServer.py  main.py
AI_Chat_demo/Client/: CMakeLists.txt  README.md  toolchain.cmake
AI_Chat_demo/Client/inc/: Application.h
AI_Chat_demo/Client/src/: Application.cc  StateMachine.cc
AI_Chat_demo/Server/: AudioProcessor.py  MessageHandler.py  ModelManager.py  README.md  WebsocketServer.py
AI_Chat_demo/Server/fasttext/: cutdata.py  test.py  train.py
AI_Chat_demo/Server/fasttext/data/: cutdata.txt
DeskBot_demo/: CMakeLists.txt  README.md  lv_conf.h
DeskBot_demo/common/: CMakeLists.txt
DeskBot_demo/common/gpio_manager/: gpio_manager.h
DeskBot_demo/common/sys_manager/: sys_manager.c
DeskBot_demo/gui_app/: ui.c  ui.h
DeskBot_demo/gui_app/fonts/: ui_font_iconfont48.c
DeskBot_demo/gui_app/pages/ui_CalculatorPage/: ui_CalculatorPage.c
DeskBot_demo/gui_app/pages/ui_ChatBotPage/: app_ChatBotPage.c  app_ChatBotPage.h  ui_ChatBotPage.c
DeskBot_demo/gui_app/pages/ui_HomePage/: ui_HomePage.c
DeskBot_demo/gui_app/pages/ui_SettingPage/: ui_SettingPage.c
DeskBot_demo/gui_app/pages/ui_WeatherPage/: ui_WeatherPage.c
DeskBot_demo/gui_app/pages/ui_YOLOPage/: ui_YOLOPage.c
DeskBot_demo/utils/: system_para.conf
WebAudio_Client/: CMakeLists.txt  README.md  toolchain.cmake
WebAudio_Client/inc/: Application.h  AudioProcess.h  StateMachine.h  WebsocketClient.h  user_log.h
WebAudio_Client/src/: Application.cc  AudioProcess.cc  StateMachine.cc  WebsocketClient.cc  main.cc
WebAudio_Server/: AudioProcessor.py  FunAudioLLM_test.py  MessageHandler.py  ModelManager.py  WebsocketServer.py  audio_paly.py  main.py  messages.md  requirements.txt
Websocket_Client/inc/: AudioProcess.h
Websocket_Client/src/: Application.cc  StateMachine.cc
Websocket_Client/test_audio/: out_chock2inmid.pcm  out_chock2instart.pcm
Websocket_test/: Application.cc  AudioProcess.cc  AudioProcess.h  CMakeLists.txt  StateMachine.cc  WebsocketClient.cc  WebsocketClient.h  main.cc  messages.md
Websocket_test/inc/: Application.h  AudioProcess.h  StateMachine.h  WebsocketClient.h
Websocket_test/src/: Application.cc  AudioProcess.cc  StateMachine.cc  WebsocketClient.cc  main.cc
lvgl_demo/: CMakeLists.txt  README.md  lv_conf.h  main.c  toolchain.cmake
lvgl_demo/common/: CMakeLists.txt
lvgl_demo/common/hardware_set/: hardware_set.c  hardware_set.h
lvgl_demo/common/sys_manager/: sys_manager.c  sys_manager.h
lvgl_demo/conf/: dev_conf.h  version.h
lvgl_demo/gui_app/: CMakeLists.txt  ui.c  ui.h
lvgl_demo/gui_app/common/: lv_lib.h  lv_lib_conf.h
lvgl_demo/gui_app/common/animation/: lv_lib_animation.c  lv_lib_animation.h
lvgl_demo/gui_app/common/others/: lv_lib_template.h
lvgl_demo/gui_app/common/page_manager/: lv_lib_pm.c  lv_lib_pm.h
lvgl_demo/gui_app/common/stack/: lv_lib_stack.h
lvgl_demo/gui_app/common/time/: lv_lib_time.c  lv_lib_time.h
lvgl_demo/gui_app/fonts/: ui_font_heiti14.c  ui_font_iconfont20.c  ui_font_iconfont36.c  ui_font_iconfont48.c
lvgl_demo/gui_app/images/: ui_img_1318505016.c  ui_img_1829120061.c  ui_img_1946976022.c  ui_img_21600057.c  ui_img_320358418.c  ui_img_364131572.c  ui_img_519153304.c  ui_img_546892240.c  ui_img_634722903.c  ui_img_657561664.c
lvgl_demo/gui_app/pages/ui_CalendarPage/: ui_CalendarPage.c
lvgl_demo/gui_app/pages/ui_ChatBotPage/: app_ChatBotPage.c  app_ChatBotPage.h  ui_ChatBotPage.c  ui_ChatBotPage.h
lvgl_demo/gui_app/pages/ui_DrawPage/: ui_DrawPage.c
lvgl_demo/gui_app/pages/ui_Game2048Page/: ui_Game2048Page.c
lvgl_demo/gui_app/pages/ui_GameMemoryPage/: ui_GameMemoryPage.c
lvgl_demo/gui_app/pages/ui_GameMuyuPage/: ui_GameMuyuPage.c
lvgl_demo/gui_app/pages/ui_HomePage/: app_HomePage.c  app_HomePage.h  ui_HomePage.c  ui_HomePage.h  ui_HomePage1.c  ui_HomePage1.h
lvgl_demo/gui_app/pages/ui_SettingPage/: ui_SettingPage.c
lvgl_demo/gui_app/pages/ui_WeatherPage/: app_WeatherPage.c  app_WeatherPage.h  ui_WeatherPage.c  ui_WeatherPage.h
lvgl_demo/utils/: system_para.conf
yolov5_demo/cpp/: AIcamera_c_interface.cc  AIcamera_c_interface.h  CMakeLists.txt  main.cc  main2.cc
yolov5_demo/cpp/rv1106_yolov5_demo/: c_face_test  rknn_yolov5_demo
