# 添加页面文件夹路径
# add_subdirectory(page_manager)
# add_subdirectory(home_page)
# add_subdirectory(settings_page)
# add_subdirectory(about_page)
# add_subdirectory(common)

# # 定义 GUI_APP_SOURCES
# file(GLOB GUI_APP_SOURCES
#     page_manager/*.c
#     home_page/*.c
#     settings_page/*.c
#     about_page/*.c
#     common/*.c
# )

# # 将这些文件添加到主项目中
# target_sources(main PRIVATE ${GUI_APP_SOURCES})
